Mapprio/main/default/objects/MapprioNPSForAccount__c/MapprioNPSForAccount__c.object-meta.xml
<CustomObject>
    <label>Mapprio NPS For Account</label>
    <nameField>
        <label>Account NPS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapprio NPS For Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>