Mapprio/main/default/objects/MapprioNPSForAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_NPS</relationshipName>
    <type>Lookup</type>
</CustomField>