Mapprio/main/default/objects/MapprioNPSForAccount__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Mapprio NPS For Accounts</relationshipLabel>
    <relationshipName>Mapprio_NPS_For_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>