Mapprio/main/default/objects/MapprioNPSForAccount__c/fields/Detractors__c.field-meta.xml
<CustomField>
    <fullName>Detractors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Detractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>