Mapprio/main/default/objects/MapprioNPSForAccount__c/fields/Passives__c.field-meta.xml
<CustomField>
    <fullName>Passives__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Passives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>