Mapprio/main/default/objects/MapprioNPSForAccount__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>MapprioQuestion__c</referenceTo>
    <relationshipName>AccountNPS</relationshipName>
    <type>Lookup</type>
</CustomField>